# detectorlag_mean_std

./: ReadMe.md  config.xml  meanroishutter.py  meanroishutter_mock.py  pyproject.toml
tests/: test_meanroishutter.py
